[tool.poetry]
name = "eptran-api"
version = "2.1.0"
description = "Api for eptran project"
authors = ["João Eduardo Périco <joaoeperico@gmail.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
django-jazzmin = "^3.0.0"
djangorestframework = "^3.15.1"
djangorestframework-simplejwt = "^5.3.1"
drf-spectacular = "^0.27.2"
django-filter = "^24.2"
django-cors-headers = "^4.4.0"
django-username-email = "^2.5.4"
